touch targets for scrum values created

--- a/custom.css
+++ b/custom.css
@@ -46,3 +46,9 @@
     background-color: #dade3a;
 }
 /* end */
+
+.scrumValue {
+    font-size: 2em;
+    line-height: 3.3em;
+    background-color: #81d8ff;
+}
