scrum point values designed more expressive

--- a/custom.css
+++ b/custom.css
@@ -1,5 +1,6 @@
 div#main{
     background-color: #a7a7a7;
+    /*background-color: #a72722;*/
 }
 
 .large-figure{
@@ -29,29 +30,25 @@ div#main{
 /* TODO just one CSS class needed, BG is good for dev */
 /* start */
 .spRow1{
-    height: 3.285em;
-    /*background-color: #de8db2;*/
+    background-color: #de8db2;
 }
 
 .spRow2{
-    height: 3.285em;
-    /*background-color: #b9deca;*/
+    background-color: #b9deca;
 }
 
 .spRow3{
-    height: 3.285em;
-    /*background-color: #98b0de;*/
+    background-color: #98b0de;
 }
 
 .spRow4{
-    height: 3.285em;
-    /*background-color: #dade3a;*/
+    background-color: #dade3a;
 }
 /* end */
 
 .scrumValue {
-    font-size: 1.5em;
+    font-size: 1em;
     line-height: 1.65em;
-    /*background-color: #81d8ff;*/
+    background-color: #81d8ff;
 }
 
