background contrast implemented

--- a/custom.css
+++ b/custom.css
@@ -7,13 +7,14 @@ div#main{
     /* 160x240 */
     font-size: 6em;
     line-height: 1.768em;
-    /*background-color: #81d8ff;*/
+    /* DEFAULT */
     background-color: #a7a7a7;
 }
 
 .header{
     height: 3.285em;
     /*background-color: #faf2cc;*/
+    /*background-color: #a7a7a7;*/
     background-color: #a7a7a7;
 }
 
@@ -30,19 +31,19 @@ div#main{
 /* TODO just one CSS class needed, BG is good for dev */
 /* start */
 .spRow1{
-    background-color: #de8db2;
+    /*background-color: #de8db2;*/
 }
 
 .spRow2{
-    background-color: #b9deca;
+    /*background-color: #b9deca;*/
 }
 
 .spRow3{
-    background-color: #98b0de;
+    /*background-color: #98b0de;*/
 }
 
 .spRow4{
-    background-color: #dade3a;
+    /*background-color: #dade3a;*/
 }
 /* end */
 
