special characters implemented

--- a/index.css
+++ b/index.css
@@ -54,7 +54,7 @@ div#main{
     margin: 1em;
 }
 
-.scrumValue {
+.selectValue {
     font-size: 1em;
     line-height: 1.65em;
     /*background-color: #81d8ff;*/
