AfterSelect settings option added, overhead css rules deleted

--- a/index.css
+++ b/index.css
@@ -1,21 +1,14 @@
 div#main{
-    /*background-color: #a7a7a7;*/
-    /*background-color: #a72722;*/
 }
 
 .large-figure{
     /* 160x240 */
     font-size: 6em;
     line-height: 1.768em;
-    /* DEFAULT */
-    /*background-color: #a7a7a7;*/
 }
 
 .header{
     height: 3.285em;
-    /*background-color: #faf2cc;*/
-    /*background-color: #a7a7a7;*/
-    /*background-color: #a7a7a7;*/
 }
 
 .content{
@@ -24,30 +17,12 @@ div#main{
 
 .footer{
     height: 3.285em;
-    /*background-color: burlywood;*/
-    /*background-color: #a7a7a7;*/
 }
 
-/* TODO just one CSS class needed, BG is good for dev */
-/* start */
-.spRow1{
-    /*background-color: #de8db2;*/
+.spRow1 .spRow2 .spRow3 .spRow4{
 }
 
-.spRow2{
-    /*background-color: #b9deca;*/
-}
-
-.spRow3{
-    /*background-color: #98b0de;*/
-}
-
-.spRow4{
-    /*background-color: #dade3a;*/
-}
-/* end */
-
-.infoContent {
+.infoContent .afterSelectContent {
     font-size: 1em;
     line-height: 1em;
     height: 1em;
@@ -57,6 +32,5 @@ div#main{
 .selectValue {
     font-size: 1em;
     line-height: 1.65em;
-    /*background-color: #81d8ff;*/
 }
 
