--- a/index.css
+++ b/index.css
@@ -1,23 +1,28 @@
 body{
     background-color: #E7E7E7;
 }
-
+td{
+    height: 200px;
+}
 .large-figure{
     /* 160x240 */
-    font-size: 6em;
-    line-height: 1.768em;
+    font-size: 12em;
+    line-height: 390px;
+    background-color: magenta;
 }
 
 .header{
-    height: 3.285em;
+    height: 45px;
+    background-color: yellow;
 }
 
 .content{
-    height: 10.62em;
+    height: 390px;
 }
 
 .footer{
-    height: 3.285em;
+    height: 45px;
+    background-color: yellow;
 }
 
 .spRow1 .spRow2 .spRow3 .spRow4{
