--- a/css/font.css
+++ b/css/font.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'sc5Font';
-	src:url('fonts/sc5Font.eot');
-	src:url('fonts/sc5Font.eot?#iefix') format('embedded-opentype'),
-		url('fonts/sc5Font.woff') format('woff'),
-		url('fonts/sc5Font.ttf') format('truetype'),
-		url('fonts/sc5Font.svg#sc5Font') format('svg');
+	src:url('../fonts/sc5Font.eot');
+	src:url('../fonts/sc5Font.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/sc5Font.woff') format('woff'),
+		url('../fonts/sc5Font.ttf') format('truetype'),
+		url('../fonts/sc5Font.svg#sc5Font') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
