changed color infrastructure to apply opacity

--- a/index.css
+++ b/index.css
@@ -6,7 +6,8 @@ body{
     /* 160x240 */
     font-size: 12em;
     line-height: 390px;
-    /*background-color: magenta;*/
+    opacity: 1.0;
+    color: #000000;
 }
 
 .header{
@@ -39,5 +40,6 @@ body{
 .selectValue {
     font-size: 1em;
     line-height: 1.65em;
+    color: #000000;
 }
 
